// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Block router > getAll > when getting paginated block results > should default to the first page when no page was specified 1`] = `
[
  {
    "blobAsCalldataGasUsed": 255000,
    "blobGasPrice": 22n,
    "blobGasUsed": 5500000,
    "excessBlobGas": 15000,
    "hash": "blockHash008",
    "number": 1008,
    "slot": 108,
    "timestamp": 2023-08-31T16:00:00.000Z,
    "transactions": [
      {
        "blobs": [
          {
            "blob": {
              "size": 1000,
            },
            "blobHash": "blobHash001",
            "index": 0,
          },
        ],
        "fromId": "address2",
        "hash": "txHash016",
        "toId": "address4",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": 255000,
    "blobGasPrice": 22n,
    "blobGasUsed": 5500000,
    "excessBlobGas": 15000,
    "hash": "blockHash007",
    "number": 1007,
    "slot": 107,
    "timestamp": 2023-08-31T14:00:00.000Z,
    "transactions": [
      {
        "blobs": [
          {
            "blob": {
              "size": 1300,
            },
            "blobHash": "blobHash004",
            "index": 0,
          },
          {
            "blob": {
              "size": 1300,
            },
            "blobHash": "blobHash004",
            "index": 1,
          },
          {
            "blob": {
              "size": 1300,
            },
            "blobHash": "blobHash004",
            "index": 2,
          },
        ],
        "fromId": "address5",
        "hash": "txHash015",
        "toId": "address4",
      },
    ],
  },
]
`;

exports[`Block router > getAll > when getting paginated block results > should return the correct number of results 1`] = `
[
  {
    "blobAsCalldataGasUsed": 255000,
    "blobGasPrice": 22n,
    "blobGasUsed": 5500000,
    "excessBlobGas": 15000,
    "hash": "blockHash008",
    "number": 1008,
    "slot": 108,
    "timestamp": 2023-08-31T16:00:00.000Z,
    "transactions": [
      {
        "blobs": [
          {
            "blob": {
              "size": 1000,
            },
            "blobHash": "blobHash001",
            "index": 0,
          },
        ],
        "fromId": "address2",
        "hash": "txHash016",
        "toId": "address4",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": 255000,
    "blobGasPrice": 22n,
    "blobGasUsed": 5500000,
    "excessBlobGas": 15000,
    "hash": "blockHash007",
    "number": 1007,
    "slot": 107,
    "timestamp": 2023-08-31T14:00:00.000Z,
    "transactions": [
      {
        "blobs": [
          {
            "blob": {
              "size": 1300,
            },
            "blobHash": "blobHash004",
            "index": 0,
          },
          {
            "blob": {
              "size": 1300,
            },
            "blobHash": "blobHash004",
            "index": 1,
          },
          {
            "blob": {
              "size": 1300,
            },
            "blobHash": "blobHash004",
            "index": 2,
          },
        ],
        "fromId": "address5",
        "hash": "txHash015",
        "toId": "address4",
      },
    ],
  },
]
`;

exports[`Block router > getByBlockNumber > should get a block by block number 1`] = `
{
  "blobAsCalldataGasUsed": 255000,
  "blobGasPrice": 22n,
  "blobGasUsed": 5500000,
  "excessBlobGas": 15000,
  "hash": "blockHash002",
  "number": 1002,
  "slot": 102,
  "timestamp": 2023-05-10T12:00:00.000Z,
  "transactions": [
    {
      "blobs": [
        {
          "blob": {
            "size": 1000,
          },
          "blobHash": "blobHash001",
          "index": 0,
        },
        {
          "blob": {
            "size": 1100,
          },
          "blobHash": "blobHash002",
          "index": 1,
        },
        {
          "blob": {
            "size": 1200,
          },
          "blobHash": "blobHash003",
          "index": 2,
        },
        {
          "blob": {
            "size": 1300,
          },
          "blobHash": "blobHash004",
          "index": 3,
        },
        {
          "blob": {
            "size": 1400,
          },
          "blobHash": "blobHash005",
          "index": 4,
        },
        {
          "blob": {
            "size": 1500,
          },
          "blobHash": "blobHash006",
          "index": 5,
        },
      ],
      "fromId": "address1",
      "hash": "txHash004",
      "toId": "address3",
    },
  ],
}
`;

exports[`Block router > getByHash > should get a block by hash 1`] = `
{
  "blobAsCalldataGasUsed": 2042780,
  "blobGasPrice": 22n,
  "blobGasUsed": 786432,
  "excessBlobGas": 15000,
  "hash": "blockHash001",
  "number": 1001,
  "slot": 101,
  "timestamp": 2022-10-16T12:00:00.000Z,
  "transactions": [
    {
      "blobs": [
        {
          "blob": {
            "size": 1000,
          },
          "blobHash": "blobHash001",
          "index": 0,
        },
        {
          "blob": {
            "size": 1100,
          },
          "blobHash": "blobHash002",
          "index": 1,
        },
        {
          "blob": {
            "size": 1200,
          },
          "blobHash": "blobHash003",
          "index": 2,
        },
      ],
      "fromId": "address1",
      "hash": "txHash001",
      "toId": "address2",
    },
    {
      "blobs": [
        {
          "blob": {
            "size": 1000,
          },
          "blobHash": "blobHash001",
          "index": 0,
        },
      ],
      "fromId": "address3",
      "hash": "txHash002",
      "toId": "address4",
    },
    {
      "blobs": [
        {
          "blob": {
            "size": 1000,
          },
          "blobHash": "blobHash001",
          "index": 0,
        },
        {
          "blob": {
            "size": 1100,
          },
          "blobHash": "blobHash002",
          "index": 1,
        },
      ],
      "fromId": "address5",
      "hash": "txHash003",
      "toId": "address6",
    },
  ],
}
`;
